Fixed an issue where breakpoints get cut off
When using Juno (atom-ink/master) on Ubuntu, there was a problem that breakpoints get cut off.
Fixed this issue.

--- a/styles/base.less
+++ b/styles/base.less
@@ -59,7 +59,7 @@ atom-text-editor {
   }
 
   .gutter {
-    background-color: @syntax-gutter-background-color;
+    background-color: inherit;
     color: @syntax-gutter-text-color;
 
     .line-number {
@@ -363,7 +363,7 @@ atom-text-editor {
     border-style: solid;
     border-width: 1px;
     border-color: @gun-powder;
-    border-radius: 3px 3px 3px 3px; 
+    border-radius: 3px 3px 3px 3px;
   }
 
   &.syntax--underline.syntax--link {
